# Particle

./: .editorconfig  CMakeLists.txt  README.md  script.sh
data/: input.txt  output.txt
data/methods/: 38_rule.txt  dp5.txt  dp8.txt  fehlberg5.txt  midpoint.txt  ralstons.txt  rk4_classic.txt
plot/: plot.py  plot_xyz.py
src/: equations.c  equations.h  main.c
src/io/: io.c  io.h
src/simulation_core/: equations.c  equations.h  simulation.c  simulation.h
src/structures/: particle.h  system_state.h
src/structures/general/: dynarray.c  dynarray.h
src/structures/math/: vector3D.c  vector3D.h
src/structures/simulation/: particle.h  system_state.h  time.h
src/structures/tables/: tableau.c  tableau.h
src/tables/: tableau.c  tableau.h
